@@ -237,6 +237,10 @@ Can you write unit tests for the generated code
 
 * Whats New
 
+** <2025-03-02> *0.3.1*
+
+Enhanced model colour contrast with themes, allowing =ollama-buddy-enable-model-colors= to be enabled by default.
+
 ** <2025-03-01> *0.3.0*
 
 Added real-time token usage tracking and display
